[package]
name = "dam"
edition = "2018"
version = "0.1.1"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/dam"
description = "Digital Asset Manager"
license = "MIT"
readme = "./README.md"

[dependencies]
clap = "2.32.0"
checksum = "0.2.1"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"
rexif = "0.3.5"
rustbreak ={ version="2.0.0-rc3", features = ["bin_enc"]} 