[package]
name = "dam"
edition = "2018"
version = "0.1.3"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/dam"
description = "Digital Asset Manager"
license = "MIT"
readme = "./README.md"

[dependencies]
clap = "2.32.0"
checksum = "0.2.1"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
rexif = "0.3.5"
rusqlite = {version="0.16.0", features=["chrono", "blob", "backup"]}
chrono = "0.4.6"
open = "1.2.2"
image="0.21.0"