[package]
name = "dam"
edition = "2018"
version = "0.1.3"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/dam"
description = "Digital Asset Manager"
license = "MIT"
readme = "./README.md"

[dependencies]
clap = "2.33.0"
checksum = "0.2.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
rexif = "0.3.6"
rusqlite = { version = "0.23.0", features = ["chrono", "blob", "backup"] }
chrono = "0.4.9"
open = "1.3.2"
image = "0.22.3"
glob = "0.3.0"
url = "2.1.0"
notify = "4.0.13"
sys-info = "0.5.8"
mime= "0.3.14"
structopt = "0.3.3"
